flux/apps/ext/cv-website/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-website-svc
spec:
  type: ClusterIP
  selector:
    app: cv-website
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
