flux/apps/ext/cv-website/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cv-website-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-ext
  hostnames:
    - "hanspaerna.lab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: middleware-chain
      backendRefs:
        - name: cv-website-svc
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-chain
spec:
  chain:
    middlewares:
      - name: bouncer
        namespace: traefik-ext
